fixed fonts on mobile

--- a/assets/scss/shared/_fonts.scss
+++ b/assets/scss/shared/_fonts.scss
@@ -2,16 +2,19 @@
   font-family: 'Inter';
   src: url('{{ site.BaseURL }}/fonts/Inter-Regular.ttf') format('truetype');
   font-weight: normal;
+  font-display: swap;
 }
 
 @font-face {
   font-family: 'Inter';
   src: url('{{ site.BaseURL }}/fonts/Inter-SemiBold.ttf') format('truetype');
   font-weight: 600;
+  font-display: swap;
 }
 
 @font-face {
   font-family: 'Inter';
   src: url('{{ site.BaseURL }}/fonts/Inter-Bold.ttf') format('truetype');
   font-weight: bold;
+  font-display: swap;
 }
